apps/whoami/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
      nodeSelector:
        kubernetes.io/hostname: k3s-3
      containers:
        - name: whoami
          image: traefik/whoami:v1.11
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
